--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" style="" href="#">
+        <a class="navbar-brand" href="#">
             <i class="fas fa-code fa-lg" style="width: 30px; height: 30px;"></i> 
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
